--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application.name: task-manager
 
   datasource:
+    url: jdbc:postgresql://localhost:5433/task-manager
+    username:
+    password:
     driver-class-name: org.postgresql.Driver
   jpa:
     properties.hibernate:
@@ -9,7 +12,6 @@ spring:
       format_sql: true
       hbm2ddl.auto: validate
     open-in-view: false
-
 
 logging:
   level:
