--- a/validation-starter/pom.xml
+++ b/validation-starter/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.ilyap</groupId>
-    <artifactId>common-logging-starter</artifactId>
+    <artifactId>validation-starter</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -25,21 +25,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
