--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 services:
   db-user:
     container_name: db-user-service
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: ${USER_SERVICE_USER}
       POSTGRES_PASSWORD: ${USER_SERVICE_PASSWORD}
     ports:
-      - "5433:5432"
+      - '5433:5432'
     volumes:
       - ./volumes/user-service:/data/postgres
     env_file:
@@ -22,11 +22,36 @@ services:
       POSTGRES_USER: ${TASK_SERVICE_USER}
       POSTGRES_PASSWORD: ${TASK_SERVICE_PASSWORD}
     ports:
-      - "5434:5432"
+      - '5434:5432'
     volumes:
       - ./volumes/task-service:/data/postgres
     env_file:
       - ./.env
 
+  victoria-metrics:
+    image: victoriametrics/victoria-metrics:v1.101.0
+    container_name: prometheus
+    ports:
+      - '8428:8428'
+    volumes:
+      - ./config/victoria-metrics/promscrape.yml:/etc/victoria-metrics/promscrape.yml
+    command: '-promscrape.config=/etc/victoria-metrics/promscrape.yml'
+
+  grafana:
+    image: grafana/grafana:11.1.0
+    container_name: grafana
+    ports:
+      - '3000:3000'
+    links:
+      - victoria-metrics:victoria-metrics
+    volumes:
+      - ./data/grafana:/var/lib/grafana
+    env_file:
+      - ./.env
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+
 networks:
-  task-manager: { }
+  task-manager:
+    driver: bridge
