--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       - ./.env
 
   victoria-metrics:
+    container_name: victoria-metrics
     image: victoriametrics/victoria-metrics:v1.101.0
-    container_name: prometheus
     ports:
       - '8428:8428'
     volumes:
@@ -38,8 +38,8 @@ services:
     command: '-promscrape.config=/etc/victoria-metrics/promscrape.yml'
 
   grafana:
-    image: grafana/grafana:11.1.0
     container_name: grafana
+    image: grafana/grafana:11.1.0
     ports:
       - '3000:3000'
     links:
