--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,13 @@ services:
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
 
+  grafana-loki:
+    container_name: grafana-loki
+    image: grafana/loki:3.0.0
+    ports:
+      - '3100:3100'
+
+
 networks:
   task-manager:
     driver: bridge
