--- a/config/victoria-metrics/promscrape.yml
+++ b/config/victoria-metrics/promscrape.yml
@@ -4,12 +4,12 @@ scrape_configs:
     static_configs:
       - targets: [ "host.docker.internal:8081" ]
         labels:
-          application: 'User Service'
+          application: 'user-service'
           instance: 'host.docker.internal:8081'
   - job_name: 'task-service'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: [ "host.docker.internal:8082" ]
         labels:
-          application: 'Task Service'
+          application: 'task-service'
           instance: 'host.docker.internal:8082'
