--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -13,6 +13,10 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
