--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,3 +3,8 @@ server:
 spring:
   application:
     name: api-gateway
+  config:
+    import: 'configserver:'
+  cloud:
+    config:
+      uri: http://${CONFIG_SERVER_USER}:${CONFIG_SERVER_PASSWORD}@localhost:8888
