--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,4 +7,10 @@ spring:
     config:
       server:
         native:
-          search-locations:  file:///${user.home}/IdeaProjects/task-manager/config/cloud
+          search-locations: file:///${user.home}/IdeaProjects/task-manager/config/cloud
+  security:
+    user:
+      name: ${CONFIG_SERVER_USER}
+      password: ${CONFIG_SERVER_PASSWORD}
+      roles:
+        - CONFIG
