--- a/config/cloud/config/task-service.yml
+++ b/config/cloud/config/task-service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5434/task-service
-    username:
-    password:
+    username: ${TASK_SERVICE_USER}
+    password: ${TASK_SERVICE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     properties.hibernate:
