--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>api-gateway</module>
+        <module>config-server</module>
         <module>eureka-server</module>
         <module>auth-service</module>
         <module>productivity-service</module>
