--- a/config/cloud/storage-service.yml
+++ b/config/cloud/storage-service.yml
@@ -1,7 +1,12 @@
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 1
+    prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+    registryFetchIntervalSeconds: 1
 management:
   zipkin:
     tracing:
