--- a/config/cloud/task-service.yml
+++ b/config/cloud/task-service.yml
@@ -27,6 +27,11 @@ management:
     sampling:
       probability: 1.0
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 1
+    prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+    registryFetchIntervalSeconds: 1
