--- a/logging-starter/pom.xml
+++ b/logging-starter/pom.xml
@@ -13,16 +13,13 @@
     <groupId>com.ilyap</groupId>
     <artifactId>logging-starter</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>21</java.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
