--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,4 @@
-version: '3.8'
-
-networks:
-  task-manager:
-    driver: bridge
+name: 'task-manager'
 
 services:
   db-user:
@@ -12,10 +8,12 @@ services:
       POSTGRES_DB: ${USER_SERVICE_DB}
       POSTGRES_USER: ${USER_SERVICE_USER}
       POSTGRES_PASSWORD: ${USER_SERVICE_PASSWORD}
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-U", $$POSTGRES_USER, "-d", $$POSTGRES_DB ]
     ports:
       - '5433:5432'
     volumes:
-      - ./volumes/user-service:/data/postgres
+      - db-user-service-data:/var/lib/postgresql/data
     env_file:
       - ./.env
 
@@ -26,34 +24,36 @@ services:
       POSTGRES_DB: ${TASK_SERVICE_DB}
       POSTGRES_USER: ${TASK_SERVICE_USER}
       POSTGRES_PASSWORD: ${TASK_SERVICE_PASSWORD}
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-U", $$POSTGRES_USER, "-d", $$POSTGRES_DB ]
     ports:
       - '5434:5432'
     volumes:
-      - ./volumes/task-service:/data/postgres
+      - db-task-service-data:/var/lib/postgresql/data
     env_file:
       - ./.env
 
   victoria-metrics:
     container_name: victoria-metrics
     image: victoriametrics/victoria-metrics:v1.101.0
+    command: -promscrape.config=/etc/victoria-metrics/promscrape.yml
     ports:
       - '8428:8428'
     volumes:
-      - ./config/victoria-metrics/promscrape.yml:/etc/victoria-metrics/promscrape.yml
-    command: '-promscrape.config=/etc/victoria-metrics/promscrape.yml'
+      - victoria-metrics-config:/etc/victoria-metrics
 
   grafana:
     container_name: grafana
     image: grafana/grafana:11.1.0
-    ports:
-      - '3000:3000'
-    volumes:
-      - ./data/grafana:/var/lib/grafana
-    env_file:
-      - ./.env
     environment:
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-data:/var/lib/grafana
+    env_file:
+      - ./.env
 
   grafana-loki:
     container_name: grafana-loki
@@ -64,9 +64,31 @@ services:
   grafana-tempo-tracing:
     container_name: grafana-tempo
     image: grafana/tempo:2.5.0
+    command: -config.file=/etc/grafana-tempo/tempo.yml
     ports:
       - '3200:3200'
       - '9411:9411' # zipkin
     volumes:
-      - ./config/tempo/tempo.yml:/etc/grafana-tempo/tempo.yml
-    command: '-config.file=/etc/grafana-tempo/tempo.yml'
+      - grafana-tempo-config:/etc/grafana-tempo
+
+networks:
+  task-manager:
+    driver: bridge
+
+volumes:
+  db-user-service-data:
+  db-task-service-data:
+  grafana-data:
+  victoria-metrics-config:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: ./config/victoria-metrics
+
+  grafana-tempo-config:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: ./config/tempo
