Change db structure

--- a/config/cloud/user-service.yml
+++ b/config/cloud/user-service.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/user-service
+    url: jdbc:postgresql://host.docker.internal:5433/user-service
     username:
     password:
     driver-class-name: org.postgresql.Driver
@@ -33,5 +33,5 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://host.docker.internal:8761/eureka/
     registryFetchIntervalSeconds: 1
