--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,17 @@ services:
     env_file:
       - ./.env
 
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:25.0.2
+    command: start-dev --import-realm
+    ports:
+      - '18080:8080'
+    volumes:
+      - keycloak-config:/opt/keycloak/data/import
+    env_file:
+      - ./.env
+
   victoria-metrics:
     container_name: victoria-metrics
     image: victoriametrics/victoria-metrics:v1.101.0
@@ -45,9 +56,6 @@ services:
   grafana:
     container_name: grafana
     image: grafana/grafana:11.1.0
-    environment:
-      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
-      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
     ports:
       - '3000:3000'
     volumes:
@@ -79,6 +87,13 @@ volumes:
   db-user-service-data:
   db-task-service-data:
   grafana-data:
+  keycloak-config:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: ./config/keycloak/import
+
   victoria-metrics-config:
     driver: local
     driver_opts:
