--- a/config/cloud/mail-service.yml
+++ b/config/cloud/mail-service.yml
@@ -1,20 +1,22 @@
 spring:
+  mail:
+    host: ${SMTP_HOST}
+    port: 587
+    username: ${SMTP_USERNAME}
+    password: ${SMTP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+    sender:
+      email: no-reply@task-manager.com
   kafka:
     bootstrap-servers: localhost:9092
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://host.docker.internal:18080/realms/task-manager
-keycloak:
-  server-url: http://host.docker.internal:18080
-  realm: task-manager
-  client-id: ${KEYCLOAK_CLIENT_ID}
-  client-secret: ${KEYCLOAK_CLIENT_SECRET}
 logging:
   level:
     root: INFO
-    org.springframework.security: TRACE
 eureka:
   instance:
     leaseRenewalIntervalInSeconds: 1
