--- a/mail-service/src/main/resources/application.yml
+++ b/mail-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8083
+  port: 8090
 spring:
   application:
-    name: storage-service
+    name: mail-service
   config:
     import: 'configserver:'
   cloud:
