--- a/config/cloud/api-gateway.yml
+++ b/config/cloud/api-gateway.yml
@@ -8,7 +8,7 @@ spring:
     gateway:
       routes:
         - id: eureka-service-route
-          uri: http://host.docker.internal:8761
+          uri: http://${EUREKA_SERVER_HOST:localhost:8761}
           predicates:
             - Host=/eureka/web
         - id: user-service-route
@@ -38,12 +38,18 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://host.docker.internal:8761/eureka/
+      defaultZone: http://${EUREKA_SERVER_HOST:localhost:8761}/eureka/
     registryFetchIntervalSeconds: 1
 management:
   zipkin:
     tracing:
-      endpoint: http://host.docker.internal:9411/api/v2/spans
+      endpoint: http://${ZIPKIN_HOST:localhost:9411}/api/v2/spans
   tracing:
     sampling:
       probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - prometheus
