--- a/config/cloud/user-service.yml
+++ b/config/cloud/user-service.yml
@@ -2,32 +2,18 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:postgresql://host.docker.internal:5433/user-service
-    username:
-    password:
+    url: jdbc:postgresql://${USER_SERVICE_DB_HOST:localhost:5433}/${USER_SERVICE_DB}
+    username: ${USER_SERVICE_USER}
+    password: ${USER_SERVICE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     properties.hibernate:
       show_sql: true
       format_sql: true
       hbm2ddl.auto: validate
-    open-in-view: false
 logging:
   level:
     root: info
-management:
-  endpoints:
-    web:
-      exposure:
-        include:
-          - health
-          - prometheus
-  zipkin:
-    tracing:
-      endpoint: http://host.docker.internal:9411/api/v2/spans
-  tracing:
-    sampling:
-      probability: 1.0
 eureka:
   instance:
     leaseRenewalIntervalInSeconds: 1
@@ -35,5 +21,18 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://host.docker.internal:8761/eureka/
+      defaultZone: http://${EUREKA_SERVER_HOST:localhost:8761}/eureka/
     registryFetchIntervalSeconds: 1
+management:
+  zipkin:
+    tracing:
+      endpoint: http://${ZIPKIN_HOST:localhost:9411}/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - prometheus
