--- a/config/cloud/eureka-server.yml
+++ b/config/cloud/eureka-server.yml
@@ -7,15 +7,21 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
 management:
-  zipkin:
-    tracing:
-      endpoint: http://${ZIPKIN_HOST:localhost:9411}/api/v2/spans
-  tracing:
-    sampling:
-      probability: 1.0
   endpoints:
     web:
       exposure:
         include:
           - health
           - prometheus
+  zipkin:
+    tracing:
+      endpoint: http://${ZIPKIN_HOST:localhost:9411}/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
