--- a/config/cloud/productivity-service.yml
+++ b/config/cloud/productivity-service.yml
@@ -17,15 +17,21 @@ eureka:
       defaultZone: http://${EUREKA_SERVER_HOST:localhost:8761}/eureka/
     registryFetchIntervalSeconds: 1
 management:
-  zipkin:
-    tracing:
-      endpoint: http://${ZIPKIN_HOST:localhost:9411}/api/v2/spans
-  tracing:
-    sampling:
-      probability: 1.0
   endpoints:
     web:
       exposure:
         include:
           - health
           - prometheus
+  zipkin:
+    tracing:
+      endpoint: http://${ZIPKIN_HOST:localhost:9411}/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
