--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: db-user-service
     image: postgres:16
     restart: unless-stopped
+    networks: 
+      - task-manager
     environment:
       POSTGRES_DB: ${USER_SERVICE_DB}
       POSTGRES_USER: ${USER_SERVICE_USER}
@@ -23,6 +25,8 @@ services:
     container_name: db-task-service
     image: postgres:16
     restart: unless-stopped
+    networks: 
+      - task-manager
     environment:
       POSTGRES_DB: ${TASK_SERVICE_DB}
       POSTGRES_USER: ${TASK_SERVICE_USER}
@@ -38,8 +42,10 @@ services:
 
   db-productivity:
     container_name: db-productivity-service
-    image: mongo:8
+    image: mongo:8.0.0-rc13
     restart: unless-stopped
+    networks: 
+      - task-manager
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${PRODUCTIVITY_SERVICE_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${PRODUCTIVITY_SERVICE_PASSWORD}
@@ -56,6 +62,8 @@ services:
     container_name: zookeeper
     image: confluentinc/cp-zookeeper:7.6.1
     restart: unless-stopped
+    networks: 
+      - task-manager
     ports:
       - '2181:2181'
     environment:
@@ -66,6 +74,8 @@ services:
     container_name: kafka
     image: confluentinc/cp-kafka:7.6.1
     restart: unless-stopped
+    networks: 
+      - task-manager
     depends_on:
       - zookeeper
     ports:
@@ -81,13 +91,16 @@ services:
   keycloak:
     container_name: keycloak
     image: quay.io/keycloak/keycloak:25.0.2
-    command: start-dev --import-realm --config-file=/opt/keycloak/conf/keycloak-server.json
+    command: start-dev --import-realm #--config-file=/opt/keycloak/conf/keycloak-server.json
     restart: unless-stopped
+    networks: 
+      - task-manager
     ports:
       - '18080:8080'
     volumes:
-      - keycloak-config:/opt/keycloak
-      - ./auth-service/target/auth-service-0.0.1-SNAPSHOT.jar:/opt/keycloak/providers/keycloak-event-listener.jar
+      - keycloak-import-config:/opt/keycloak/import
+    #      - keycloak-providers-config:/opt/keycloak/conf
+    #      - ./auth-service/target/auth-service-0.0.1-SNAPSHOT.jar:/opt/keycloak/providers/keycloak-event-listener.jar
     env_file:
       - ./.env
 
@@ -96,6 +109,8 @@ services:
     image: victoriametrics/victoria-metrics:v1.101.0
     command: -promscrape.config=/etc/victoria-metrics/promscrape.yml
     restart: unless-stopped
+    networks: 
+      - task-manager
     ports:
       - '8428:8428'
     volumes:
@@ -105,6 +120,8 @@ services:
     container_name: grafana
     image: grafana/grafana:11.1.0
     restart: unless-stopped
+    networks: 
+      - task-manager
     ports:
       - '3000:3000'
     volumes:
@@ -116,6 +133,8 @@ services:
     container_name: grafana-loki
     image: grafana/loki:3.0.0
     restart: unless-stopped
+    networks: 
+      - task-manager
     ports:
       - '3100:3100'
 
@@ -124,6 +143,8 @@ services:
     image: grafana/tempo:2.5.0
     command: -config.file=/etc/grafana-tempo/tempo.yml
     restart: unless-stopped
+    networks: 
+      - task-manager
     ports:
       - '3200:3200'
       - '9411:9411' # zipkin
@@ -140,12 +161,12 @@ volumes:
   db-task-service-data:
   db-productivity-service-data:
   grafana-data:
-  keycloak-config:
+  keycloak-import-config:
     driver: local
     driver_opts:
       o: bind
       type: none
-      device: ./config/keycloak
+      device: ./config/keycloak/import
 
   victoria-metrics-config:
     driver: local
