--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,8 +1,9 @@
 # common
+EUREKA_INSTANCE=eureka-server
 EUREKA_SERVER_HOST=eureka-server:8761
 CONFIG_SERVER_HOST=config-server:8888
 LOKI_URL=grafana-loki:3100
-KAFKA_HOST=kafka:29092
+KAFKA_BOOTSTRAP_SERVERS=kafka:29092
 ZIPKIN_HOST=grafana-tempo:9411
 KEYCLOAK_HOST=keycloak:8080
 
