--- a/config/cloud/auth-service.yml
+++ b/config/cloud/auth-service.yml
@@ -2,7 +2,7 @@ server:
   port: 8084
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
   security:
     oauth2:
       resourceserver:
