UsersController integration tests

--- a/config/cloud/user-service.yml
+++ b/config/cloud/user-service.yml
@@ -7,6 +7,7 @@ spring:
     password: ${USER_SERVICE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
+    open-in-view: false
     properties.hibernate:
       show_sql: true
       format_sql: true
