--- a/config/cloud/productivity-service.yml
+++ b/config/cloud/productivity-service.yml
@@ -7,6 +7,15 @@ spring:
       username: ${PRODUCTIVITY_SERVICE_USER}
       password: ${PRODUCTIVITY_SERVICE_PASSWORD}
       driver-class-name: org.postgresql.Driver
+  main:
+    web-application-type: reactive
+logging:
+  level:
+    root: info
+    org.springframework.data.mongodb.core.MongoTemplate: debug
+    org.springframework.data.mongodb.core.MongoOperations: debug
+    org.springframework.data.mongodb.core.MongoDatabaseFactory: debug
+    org.mongodb.driver: debug
 eureka:
   instance:
     leaseRenewalIntervalInSeconds: 1
