--- a/user-service/src/test/resources/application.yml
+++ b/user-service/src/test/resources/application.yml
@@ -8,6 +8,8 @@ spring:
   cloud:
     config:
       enabled: false
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 eureka:
   client:
     enabled: false
