--- a/config/cloud/auth-service.yml
+++ b/config/cloud/auth-service.yml
@@ -1,6 +1,8 @@
 server:
   port: 8084
 spring:
+  jackson:
+    property-naming-strategy: SNAKE_CASE
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
   security:
