--- a/productivity-service/src/test/resources/application.yml
+++ b/productivity-service/src/test/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   cloud:
     config:
       enabled: false
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 eureka:
   client:
     enabled: false
