Add workflow_dispatch to workflows

--- a/.github/workflows/publish-logging-starter.yml
+++ b/.github/workflows/publish-logging-starter.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ 'master' ]
     paths: [ 'logging-starter/**' ]
+  workflow_dispatch:
 env:
   STARTER: logging-starter
 jobs:
