--- a/.github/workflows/push-config-server.yml
+++ b/.github/workflows/push-config-server.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ 'master' ]
     paths: [ 'config-server/**' ]
+  workflow_dispatch:
 env:
   SERVICE: config-server
 jobs:
