--- a/.github/workflows/publish-logging-starter.yml
+++ b/.github/workflows/publish-logging-starter.yml
@@ -12,14 +12,14 @@ jobs:
   publish:
     runs-on: ubuntu-22.04
     steps:
-      - name: checkout code
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4.1.7
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4.2.2
         with:
           java-version: '21'
-          distribution: 'adopt'
+          distribution: 'temurin'
 
       - name: Build starter
         run: mvn clean install -f ${{env.STARTER}}
