--- a/.github/workflows/push-productivity-service.yml
+++ b/.github/workflows/push-productivity-service.yml
@@ -13,13 +13,13 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.7
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4.2.2
         with:
           java-version: '21'
-          distribution: 'adopt'
+          distribution: 'temurin'
 
       - name: Set up Maven settings
         run: cp .github/maven-settings.xml $HOME/.m2/settings.xml
@@ -28,13 +28,13 @@ jobs:
         run: mvn -B verify -f ${{ env.SERVICE }}/pom.xml
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3.3.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6.7.0
         with:
           context: ./${{ env.SERVICE }}
           push: true
