Publish parent POM workflow fix again x3

--- a/.github/workflows/publish-parent-pom.yml
+++ b/.github/workflows/publish-parent-pom.yml
@@ -24,4 +24,4 @@ jobs:
         run: cp .github/maven-settings.xml $HOME/.m2/settings.xml
 
       - name: Publish POM
-        run: mvn deploy:deploy-file -Dfile=pom.xml -DpomFile=pom.xml -Durl=https://maven.pkg.github.com/IlyaPukhov/task-manager -DrepositoryId=github --settings $HOME/.m2/settings.xml
+        run: mvn deploy:deploy-file -Dfile=pom.xml -DpomFile=pom.xml -DgeneratePom=false -Durl=https://maven.pkg.github.com/IlyaPukhov/task-manager -DrepositoryId=github
