--- a/.github/workflows/push-task-service.yml
+++ b/.github/workflows/push-task-service.yml
@@ -39,3 +39,6 @@ jobs:
           context: ./${{ env.SERVICE }}
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.SERVICE }}:latest
+          secret-envs: |
+            GITHUB_ACTOR=${{ secrets.GITHUB_ACTOR }}
+            GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
