--- a/.github/workflows/push-api-gateway.yml
+++ b/.github/workflows/push-api-gateway.yml
@@ -41,6 +41,6 @@ jobs:
           context: ./${{ env.SERVICE }}
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.SERVICE }}:latest
-          secret-envs: |
+          build-args: |
             GITHUB_ACTOR=${{ env.GITHUB_ACTOR }}
             GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
